WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310675
Unable to change message font to Helvetica in Mail
https://bugs.webkit.org/show_bug.cgi?id=310675
Summary
Unable to change message font to Helvetica in Mail
Per Arne Vollan
Reported
2026-03-24 16:44:44 PDT
Unable to change message font to Helvetica in Mail.
Attachments
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2026-03-24 16:44:46 PDT
<
rdar://problem/172261885
>
Per Arne Vollan
Comment 2
2026-03-24 16:46:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61284
EWS
Comment 3
2026-03-25 12:13:07 PDT
Committed
309931@main
(517f3888ca36): <
https://commits.webkit.org/309931@main
> Reviewed commits have been landed. Closing PR #61284 and removing active labels.
EWS
Comment 4
2026-03-25 16:14:26 PDT
Committed
305413.575@safari-7624-branch
(f2509e9d637c): <
https://commits.webkit.org/305413.575@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4805 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug