Cherry-pick 517f3888ca36. rdar://173345107

Unable to change message font to Helvetica in Mail
    https://bugs.webkit.org/show_bug.cgi?id=310675
    rdar://172261885

    Reviewed by Sihui Liu.

    Helvetica is a system font with several variants, so we choose not to register additional fonts in this family.
    This is because it can affect font matching, since manually registered fonts take precedence. We intend to
    follow up with a more generic fix.

    * Source/WebCore/platform/graphics/cocoa/FontCacheCoreText.cpp:
    (WebCore::registerFontsInFamilyIfNeeded):
    (WebCore::FontCache::createFontPlatformData):

    Canonical link: https://commits.webkit.org/309931@main

Identifier: 305413.575@safari-7624-branch